force-app/main/default/objects/Promo_Budget_Line__c/Promo_Budget_Line__c.object-meta.xml
<CustomObject>
    <label>Promo Budget Line</label>
    <nameField>
        <label>Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promo Budget Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>