force-app/main/default/objects/Promo_Budget_Line__c/fields/Pharma_Project__c.field-meta.xml
<CustomField>
    <fullName>Pharma_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharma Project</label>
    <referenceTo>Pharma_Project__c</referenceTo>
    <relationshipLabel>Promo Budget Lines</relationshipLabel>
    <relationshipName>Promo_Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>