force-app/main/default/objects/Promo_Budget_Line__c/fields/Promo_Budget__c.field-meta.xml
<CustomField>
    <fullName>Promo_Budget__c</fullName>
    <label>Promo Budget</label>
    <referenceTo>Promo_Budget__c</referenceTo>
    <relationshipLabel>Budget Lines</relationshipLabel>
    <relationshipName>Promo_Budget</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>